--- a/.github/workflows/modal.yml
+++ b/.github/workflows/modal.yml
@@ -22,9 +22,6 @@ jobs:
       run: |
         pip install modal-client
     - name: Run script
-      env:
-        MODAL_TOKEN_ID: ${{ secret.MODAL_TOKEN_ID }}
-        MODAL_TOKEN_SECRET: ${{ secret.MODAL_TOKEN_SECRET }}
       run: |
-        modal token set --token-id $MODAL_TOKEN_ID --token-secret $MODAL_TOKEN_SECRET
+        modal token set --token-id ${{ secrets.MODAL_TOKEN_ID }} --token-secret ${{ secrets.MODAL_TOKEN_SECRET }}
         modal run main.py
